# ATC

./: .env.example  .gitignore  docker-compose.yml  nginx.conf
.agent/: README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_remove_hat_type.py  003_add_plan_processing_status.py  004_add_job_executions_table.py  005_add_task_images.py  006_add_task_session_fields.py  007_add_claude_tokens.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/core/: config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  claude_token.py  coding_session.py  comment.py  enums.py  hat.py  job_execution.py  plan.py  project.py  review.py  task.py  task_image.py  triage.py  user.py
backend/app/routers/: __init__.py  auth.py  claude_tokens.py  comments.py  debug.py  events.py  hats.py  jobs.py  plans.py  projects.py  sessions.py  system.py  tasks.py  triage.py  users.py
backend/app/schemas/: __init__.py  base.py  claude_token.py  comment.py  common.py  hat.py  plan.py  project.py  review.py  session.py  task.py  task_image.py  triage.py  user.py  websocket.py
backend/app/services/: claude.py  encryption.py  git.py  task_queue.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_claude_tokens.py  test_comments.py  test_git_service.py  test_projects.py  test_sessions.py  test_task_queue.py  test_tasks.py
dockerfiles/: backend.Dockerfile  frontend.Dockerfile
docs/: README.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
utils/: dev.sh  startup.sh  stop.sh
(+75 files in other folders)
